--- a/fotosPug.css
+++ b/fotosPug.css
@@ -3,11 +3,11 @@ body {
 }
 
 img {
-    width: 30%;
+    width: 100%;
     height: 480px;
     border-radius: 5px;
-    float: left;
     margin: 20px;
+    box-shadow: 0 0 10px rgba(228, 157, 6, 0.8);
 }
 
 img:hover {
@@ -20,5 +20,25 @@ header {
 }
 
 .contenedor {
-    width: 100%;
+    margin: 20px auto;
+    padding: 0px 10px 20px;
+    border: 1px solid #dadada;
+    border-radius: 5px;
+    display: inline-flex;
+}
+
+figcaption,
+.img-footer {
+    font-style: italic;
+    color: black;
+    font-size: 1.1em;
+    text-align: center;
+    margin: 10px 0px;
+}
+
+@media only screen and (max-width: 768px) {
+    img {
+        width: 160px;
+        height: 150px;
+    }
 }
