--- a/fotosPug.css
+++ b/fotosPug.css
@@ -38,7 +38,22 @@ figcaption,
 
 @media only screen and (max-width: 768px) {
     img {
-        width: 160px;
+        width: 80%;
         height: 150px;
+    }
+    .contenedor {
+        width: 100%;
+        display: block;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    img {
+        width: 80%;
+        height: 400px;
+    }
+    .contenedor {
+        width: 100%;
+        display: block;
     }
 }
