--- a/fotosPug.css
+++ b/fotosPug.css
@@ -21,10 +21,23 @@ header {
 
 .contenedor {
     margin: 20px auto;
-    padding: 0px 10px 20px;
     border: 1px solid #dadada;
     border-radius: 5px;
     display: inline-flex;
+}
+
+.sidebar {
+    width: 100px;
+}
+
+.sidebar p {
+    height: 20px;
+    width: 20px;
+    display: block;
+}
+
+.contenido {
+    display: flex;
 }
 
 figcaption,
