--- a/17-05-2021.css
+++ b/17-05-2021.css
@@ -2,9 +2,13 @@ body {
     background-color: darkgray;
 }
 
+.contenido {
+    display: flex;
+}
+
 img {
     width: 100%;
-    height: 480px;
+    height: 380px;
     border-radius: 5px;
     margin: 20px;
     box-shadow: 0 0 10px rgba(228, 157, 6, 0.8);
@@ -20,16 +24,32 @@ header {
     background-color: dimgray;
     height: 100px;
     padding: 5px;
+    border-radius: 5px;
+}
+
+header h1 {
+    margin-top: 10px;
 }
 
 .sidebar {
     width: 11%;
     float: left;
     text-align: center;
-    padding: 6px;
+    padding: 2px;
 }
 
-.sidebar p {
+.sidebar ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.sidebar li {
+    width: 100%;
+    height: 100px;
+    background-color: dimgrey;
+}
+
+.sidebar a {
     height: 40px;
     display: block;
     width: 100%;
@@ -39,18 +59,16 @@ header {
     background-color: lightcyan;
     color: black;
     font-weight: bold;
-}
-
-.sidebar a {
-    color: white;
+    border-radius: 5px;
     text-decoration: none;
 }
 
-.sidebar p:hover {
+.sidebar a:hover {
     background-color: burlywood;
 }
 
-.contenido {
+.contenedor {
+    width: 89%;
     display: flex;
 }
 
