--- a/17-05-2021.css
+++ b/17-05-2021.css
@@ -7,6 +7,10 @@ body {
     margin-top: 10px;
 }
 
+figure {
+    margin: 30px 10px 20px 20px;
+}
+
 img {
     width: 100%;
     height: 380px;
@@ -73,6 +77,7 @@ header h1 {
 .contenedor {
     width: 89%;
     display: flex;
+    margin-left: 40px;
 }
 
 .footer {
