--- a/17-05-2021.css
+++ b/17-05-2021.css
@@ -66,6 +66,7 @@ img {
     border-radius: 5px;
     margin: 0px;
     box-shadow: 0px 0px 0px 4px #dabe2e;
+    box-sizing: border-box
 }
 
 img:hover {
