--- a/20-05-2021.css
+++ b/20-05-2021.css
@@ -17,7 +17,8 @@ header {
     background-color: dimgrey;
     text-align: center;
     border-radius: 5px;
-    box-shadow: 5px 0px 2px 13px #dabe2e
+    box-shadow: 5px 0px 2px 13px #dabe2e;
+    position: sticky;
 }
 
 .topbar ul {
@@ -59,6 +60,7 @@ header {
 .imagenes {
     width: 100%;
     height: 500px;
+    position: relative;
 }
 
 figure {
@@ -75,9 +77,13 @@ figcaption {
     bottom: 50px;
     background-color: rgba(218, 190, 46, 0.5);
     text-align: center;
-    width: 100%;
     height: 50px;
     border-radius: 5px;
+    width: 100%;
+}
+
+figcaption p {
+    margin: 0;
 }
 
 img {
@@ -139,16 +145,66 @@ header h1 {
         width: 100%;
         display: block;
     }
+    .topbar li {
+        width: 20%;
+    }
+    figure {
+        width: 100%;
+    }
+    figcaption {
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width: 1024px) {
     img {
-        width: 80%;
+        width: 90%;
         height: 400px;
     }
     .contenedor {
         width: 100%;
         display: block;
+    }
+    .topbar li {
+        width: 20%;
+    }
+    figure {
+        width: 100%;
+    }
+    figcaption {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 1400px) {
+    img {
+        width: 90%;
+        height: 400px;
+    }
+    .contenedor {
+        width: 100%;
+        display: block;
+    }
+    .topbar li {
+        width: 20%;
+    }
+    figure {
+        width: 100%;
+    }
+    figcaption {
+        width: 90%;
+    }
+    .parrafo {
+        display: flow-root;
+    }
+}
+
+@media only screen and (min-width: 1400px) {
+    figure {
+        width: 26%;
+    }
+    figcaption {
+        width: 100%;
     }
 }
 
