--- a/20-05-2021.css
+++ b/20-05-2021.css
@@ -59,7 +59,7 @@ header {
 
 .imagenes {
     width: 100%;
-    height: 500px;
+    height: 450px;
     position: relative;
 }
 
@@ -201,12 +201,15 @@ header h1 {
     }
 }
 
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 1401px) {
     figure {
-        width: 26%;
+        width: 27%;
     }
     figcaption {
-        width: 100%;
+        width: 90%;
+    }
+    .parrafo {
+        display: block;
     }
 }
 
