--- a/assets/css/21-05-2021.css
+++ b/assets/css/21-05-2021.css
@@ -102,6 +102,8 @@ figcaption,
     }
     .contenido {
         grid-column: 1 / span 4;
+        display: grid;
+        text-align: center;
     }
     .lado {
         width: 0%;
