--- a/assets/css/21-05-2021.css
+++ b/assets/css/21-05-2021.css
@@ -171,7 +171,7 @@ figcaption p {
 
 /* moviles */
 
-@media only screen and (max-width: 400px) {
+@media (max-width: 400px) {
     .topbar li {
         width: 40%;
     }
