remodelado pagina bootstrap
que la habia liado bien

--- a/assets/css/24-05-2021b.less
+++ b/assets/css/24-05-2021b.less
@@ -100,7 +100,7 @@ body{
     margin: 20px;
     background-color: @colorCaption;
     font-weight: bold;
-    box-shadow: 3px 2px 5px 4px dimgrey;
+    // box-shadow: 3px 2px 5px 4px dimgrey;
     padding: 4px;
     border-radius: 5px;
     display: inline-block;
