--- a/prototypes/03-06-2021/estilos.css
+++ b/prototypes/03-06-2021/estilos.css
@@ -3,7 +3,7 @@
 .flip-box {
     background-color: transparent;
     width: 90%;
-    height: 400px;
+    height: 600px;
     border: 1px solid #f1f1f1;
     perspective: 1000px;
     margin: 5px;
@@ -16,7 +16,6 @@
 .flip-box-inner {
     position: relative;
     width: 100%;
-    height: 100%;
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
@@ -36,7 +35,7 @@
 .flip-box-back {
     position: absolute;
     width: 100%;
-    height: 400px;
+    height: 600px;
     -webkit-backface-visibility: hidden;
     /* Safari */
     backface-visibility: hidden;
@@ -58,5 +57,5 @@
 }
 
 img {
-    width: 50%;
+    max-height: 500px;
 }
