--- a/assets/css/17-05-2021.css
+++ b/assets/css/17-05-2021.css
@@ -1,156 +1,3 @@
-body {
-    background-color: darkgray;
-}
-
-header {
-    text-align: center;
-    background-color: dimgray;
-    height: 100px;
-    padding: 5px;
-    border-radius: 5px;
-    box-shadow: -6px 10px 10px 26px #dabe2e;
-}
-
-.topbar {
-    width: 100%;
-    height: 50px;
-    background-color: dimgrey;
-    text-align: center;
-    border-radius: 5px;
-    box-shadow: 5px 0px 2px 13px #dabe2e
-}
-
-.topbar ul {
-    list-style-type: none;
-    padding: 4px;
-}
-
-.topbar li {
-    float: left;
-    width: 23%;
-    background-color: #3db0d0;
-    border-radius: 5px;
-    border: 1px solid black;
-    margin-left: 20px;
-    height: 70px;
-}
-
-.topbar li a {
-    height: 30px;
-    display: block;
-    border-radius: 5px;
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-    padding: 1px 1px 1px 1px;
-    margin-top: 21px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 1.3em;
-}
-
-.topbar li:hover {
-    background-color: burlywood;
-}
-
-.contenido {
-    margin-top: 30px;
-}
-
-.imagenes {
-    width: 100%;
-    height: 500px;
-}
-
-figure {
-    /* margin: 30px 10px 20px 20px; */
-    float: left;
-    width: 29%;
-    z-index: 999;
-}
-
-figcaption {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bold;
-}
-
-img {
-    width: 100%;
-    height: 380px;
-    border-radius: 5px;
-    margin: 0px;
-    box-shadow: 0px 0px 0px 4px #dabe2e;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-img:hover {
-    border: 2px solid black;
-    filter: grayscale(80%);
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-}
-
-header h1 {
-    margin-top: 10px;
-}
-
-.parrafo {
-    margin: 20px;
-    background-color: #dabe2e;
-    font-weight: bold;
-    box-shadow: 3px 2px 5px 4px dimgrey;
-    padding: 4px;
-    border-radius: 5px;
-}
-
-.parrafo h3::first-letter {
-    font-size: 40px;
-}
-
-.parrafo p {
-    padding-left: 7px;
-}
-
-.footer {
-    margin: 20px;
-    background-color: #dabe2e;
-    font-weight: bold;
-    box-shadow: 3px 2px 5px 4px dimgrey;
-    padding: 4px;
-    border-radius: 5px;
-    text-align: center;
-    width: 30%;
-    margin: 0 auto;
-}
-
-@media only screen and (max-width: 768px) {
-    img {
-        width: 80%;
-        height: 150px;
-    }
-    .contenedor {
-        width: 100%;
-        display: block;
-    }
-}
-
-@media only screen and (max-width: 1024px) {
-    img {
-        width: 80%;
-        height: 400px;
-    }
-    .contenedor {
-        width: 100%;
-        display: block;
-    }
-}
-
-.test {
-    position: absolute;
-    background-color: #dabe2e;
-    height: 200px;
-    width: 77%;
-    z-index: -1;
-    margin: 266px;
-    box-shadow: 3px 2px 5px 4px dimgrey;
+button a{
+    color:black;
 }
