--- a/assets/css/estilos17-05.css
+++ b/assets/css/estilos17-05.css
@@ -1,83 +1,4 @@
-body {
-    background-color: darkgray;
-}
-
-img {
-    width: 100%;
-    height: 480px;
-    border-radius: 5px;
-    margin: 20px;
-    box-shadow: 0 0 10px rgba(228, 157, 6, 0.8);
-}
-
-img:hover {
-    border: 2px solid black;
-    filter: grayscale(80%);
-}
-
-header {
-    text-align: center;
-    background-color: dimgray;
-    height: 100px;
-    padding: 5px;
-}
-
-.sidebar {
-    width: 11%;
-    float: left;
-    text-align: center;
-    padding: 6px;
-}
-
-.sidebar p {
-    height: 40px;
-    display: block;
-    width: 100%;
-    border: 1px solid black;
-    margin: 0;
-    padding: 27px 10px 10px 10px;
-    background-color: lightcyan;
+button a{
     color: black;
-    font-weight: bold;
-}
-
-.sidebar a {
-    color: white;
     text-decoration: none;
-    display: grid;
-}
-
-.sidebar p:hover {
-    background-color: burlywood;
-}
-
-.contenido {
-    display: flex;
-}
-
-.footer {
-    text-align: center;
-    background-color: dimgray;
-}
-
-@media only screen and (max-width: 768px) {
-    img {
-        width: 80%;
-        height: 150px;
-    }
-    .contenedor {
-        width: 100%;
-        display: block;
-    }
-}
-
-@media only screen and (max-width: 1024px) {
-    img {
-        width: 80%;
-        height: 400px;
-    }
-    .contenedor {
-        width: 100%;
-        display: block;
-    }
 }
