--- a/assets/css/estilos17-05.css
+++ b/assets/css/estilos17-05.css
@@ -6,3 +6,15 @@ button a:hover{
 
     color:rgb(255, 255, 255);
 }
+.card img:hover {
+
+    
+        transform:scale(1);
+        -ms-transform:scale(1); 
+        -moz-transform:scale(1);
+        -webkit-transform:scale(1);  
+        -o-transform:scale(1); 
+    
+
+
+}
