--- a/assets/css/estilos17-05.css
+++ b/assets/css/estilos17-05.css
@@ -6,14 +6,14 @@ button a:hover{
 
     color:rgb(255, 255, 255);
 }
-.card img:hover {
+.card:hover {
 
-    
-        transform:scale(1);
+        color: blueviolet;
+        /* transform:scale(1);
         -ms-transform:scale(1); 
         -moz-transform:scale(1);
         -webkit-transform:scale(1);  
-        -o-transform:scale(1); 
+        -o-transform:scale(1);  */
     
 
 
