--- a/assets/css/estilos17-05.css
+++ b/assets/css/estilos17-05.css
@@ -6,15 +6,16 @@ button a:hover{
 
     color:rgb(255, 255, 255);
 }
-.card:hover {
-
-        color: blueviolet;
-        /* transform:scale(1);
-        -ms-transform:scale(1); 
-        -moz-transform:scale(1);
-        -webkit-transform:scale(1);  
-        -o-transform:scale(1);  */
-    
 
 
-}
+.gris{
+    -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+  }
+  .gris:hover{
+    -webkit-filter: grayscale(0);
+  filter: grayscale(0);
+  }
+
