--- a/assets/css/estilos17-05.css
+++ b/assets/css/estilos17-05.css
@@ -19,3 +19,16 @@ button a:hover{
   filter: grayscale(0);
   }
 
+  @media screen and (max-width:1400px) { 
+    .card{
+      width: 50%;
+    }
+    
+  }
+  @media screen and (max-width:1040px) { 
+    
+  }
+  @media screen and (max-width:735px) { 
+    
+  }
+
